--- a/styles/template.css
+++ b/styles/template.css
@@ -1,15 +1,9 @@
-@media (min-width: 200px) {     /* for general stylings (all screens) */
+@media (min-width: 50) {     /* for general stylings (all screens) */
     
 } 
-@media (max-width: 767px) { /* for only styles between 320px and 768px (most mobile devies) */
+@media (max-width: 499px) { /* for only styles between 320px and 768px (most mobile devies) */
 
 } 
-@media (min-width: 768px) { /* general desktop && tablet styles if needed */
-
-}  
-@media (min-width: 768px) and (max-width: 1024px) { /* only tablet styles */
-
-} 
-@media (min-width: 1025px) {/* only desktop styling */
+@media (min-width: 500px) { /* general desktop && tablet styles if needed */
 
 }
